--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-router-redux": "^5.0.18",
     "redux-devtools-extension": "^2.13.9"
